# Federated-Learning

./: LICENSE  README.md  cifar_client.py  cifar_server.py  client.py  graphics.py  main.py  no_timeout.json  norm_dist.py  pyproject.toml  run.sh  server.py  sim.py  timeout.py
results/: cifar.json  mnist_clients_normalized_lower.json  mnist_clients_normalized_mean.json  mnist_clients_normalized_upper.json  mnist_dynamic_timeout.json  mnist_no_timeout.json
