[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Dymanic Timeout Window in FL"
version = "0.1.0"
description = "Dynamic Timeout"
authors = ["Carl Smestad <carl.smestad@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flwr = { version = "^1.0.0", extras = ["simulation"] }
tensorflow-cpu = "^2.9.1"
matplotlib = "^3.7.1"
